# Sentinel-Fusion-Sim

./: .gitignore  OPTIMIZATION_PLAN.md  README.md
TargetDetectionSystem/: CMakeLists.txt  Makefile  README.md  build.sh
TargetDetectionSystem/include/: MonitorInterface.h  RadarSensor.h  SensorSimulator.h  TargetDetector.h
TargetDetectionSystem/src/: MonitorInterface.cpp  SensorSimulator.cpp  TargetDetector.cpp  benchmark.cpp  main.cpp
